<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">蓝牙输入法</string>
    <string name="ime_name">蓝牙输入法</string>
    <string name="ime_settings_activity_name">前往输入法设置</string>
    <string name="ime_connect_activity_test">输入法测试</string>
    <!-- version = apk(java) + ime engine + sys dict + [hotlist (TBD)] -->
    <string name="version">1.0.0</string>

    <!-- Used by the toggle keys in soft keyboards. -->
    <string name="toggle_cn">0</string>
    <string name="toggle_cn_cand">1</string>
    <string name="toggle_en_lower">2</string>
    <string name="toggle_en_upper">3</string>
    <string name="toggle_en_sym1">4</string>
    <string name="toggle_en_sym2">5</string>
    <string name="toggle_smiley">6</string>
    <string name="toggle_enter_go">7</string>
    <string name="toggle_enter_search">8</string>
    <string name="toggle_enter_send">9</string>
    <string name="toggle_enter_next">10</string>
    <string name="toggle_enter_done">11</string>
    <string name="toggle_row_cn">12</string>
    <string name="toggle_row_en">13</string>
    <string name="toggle_row_uri">14</string>
    <string name="toggle_row_emailaddress">15</string>
    <string name="toggle_phone_sym">3</string>

    <!-- settings related -->
    <string name="setting_sound_key">setting_sound_key</string>
    <string name="setting_vibrate_key">setting_vibrate_key</string>
    <string name="setting_prediction_key">setting_prediction_key</string>
    <string name="setting_switch_key">setting_switch_key</string>
    <string name="setting_advanced_key">setting_advanced_key</string>
    <string name="setting">输入法配置</string>
    <string name="setting_sound_key_title">按键声音</string>
    <string name="setting_vibrate_title">按键震动</string>
    <string name="setting_prediction_title">联想输入</string>
    <string name="setting_switch_title">中英文切换</string>
    <string name="setting_switch_shift_space_title">Shift-space</string>
    <string name="setting_enabled">开启</string>
    <string name="setting_disabled">关闭</string>
    <string name="setting_others">其它设置</string>
    <string name="setting_others_summary">词典同步等</string>
    
    <string name="send">发送</string>
    <string name="clear">清空</string>
    <string name="not_connected">未连接设备</string>
    <string name="bt_not_enabled_leaving">蓝牙未启用</string>
    <string name="devoice_connecting">蓝牙连接中...</string>
    <string name="devoice_connected_to">已经连接: </string>
    <string name="devoice_not_connected">设备未连接</string>

    <string name="scanning">扫描设备...</string>
    <string name="select_device">选择一个设备连接</string>
    <string name="none_paired">没有配对的设备</string>
    <string name="none_found_device">没有发现设备</string>
    <string name="title_paired_devices">已配对的设备</string>
    <string name="title_other_devices">其他可用的设备</string>
    <string name="button_scan">扫描设备</string>

    <string name="connect">连接设备</string>
    <string name="discoverable">允许发现</string>
    
    <string name="Devices">设备</string>
    <string name="StartScan">开启扫描</string>
    <string name="StartBluetooth">连接蓝牙</string>
    <string name="StopBluetooth">断开连接</string>
    <string name="SuccessBluetooth">蓝牙连接成功</string>
    <string name="Function">功能</string>
    <string name="gs_about">关于</string>
    <string name="key_cn_symbol">ALT</string>
    <string name="key_cn_usb">USB</string>
    <string name="ui_title_back">返回</string>
    <string name="ui_title_complete">完成</string>
    <string name="ui_title_settings">设置</string>
    <string name="ui_title_title">标题</string>
    <string name="SetTitle">如何使用蓝牙输入法</string>
    <string name="SetFirstStep">第一步：激活蓝牙输入法</string>
    <string name="Choose">勾选</string>
    <string name="PleaseChooseInputMothed">请勾选蓝牙输入法</string>
    <string name="SetSecondStep">第二步：开启蓝牙，并配对设备，配对码为1234</string>
    <string name="Open">开启</string>
    <string name="SetThirdStep">第三步：自动搜索蓝牙设备，并通过蓝牙设备列表，选择所要连接的设备</string>
    <string name="SelectBlueDevice">选择设备</string>
    <string name="SetForthStep">第四步：启用蓝牙输入法</string>
    <string name="Change">更改</string>
    <string name="SetLastStep">最后一步：测试与激活</string>
    <string name="Test">测试</string>
    <string name="select_bluetoothIME">请勾选蓝牙输入法</string>
    <string name="BeginTest">单击此处开始测试与激活</string>
    
    <string name="QuickConfigBarcode">条码配置</string>
    <string name="SettingScanner">发送命令配置扫描器</string>
    <string name="ReadScanner">读取扫描器信息</string>
    <string name="FunctionScanner">扫描器功能</string>
</resources>
