<?xml version="1.0" encoding="UTF-8"?>
<!-- 设置 -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/setting" >

    <CheckBoxPreference
        android:key="@string/setting_sound_key"
        android:persistent="true"
        android:summaryOff="@string/setting_disabled"
        android:summaryOn="@string/setting_enabled"
        android:title="@string/setting_sound_key_title" />
    <CheckBoxPreference
        android:key="@string/setting_vibrate_key"
        android:persistent="false"
        android:summaryOff="@string/setting_disabled"
        android:summaryOn="@string/setting_enabled"
        android:title="@string/setting_vibrate_title" />
    <CheckBoxPreference
        android:key="@string/setting_prediction_key"
        android:persistent="true"
        android:summaryOff="@string/setting_disabled"
        android:summaryOn="@string/setting_enabled"
        android:title="@string/setting_prediction_title" />

    <!-- Remove following entry to unbundle Google functionality -->
    <PreferenceScreen
        android:key="@string/setting_advanced_key"
        android:summary="@string/setting_others_summary"
        android:title="@string/setting_others" >
        <intent android:action="com.android.inputmethod.pinyingoogleservice.SETTINGS" />
    </PreferenceScreen>

    <Preference
        style="?android:preferenceInformationStyle"
        android:key="@string/setting_switch_key"
        android:persistent="false"
        android:summary="@string/setting_switch_shift_space_title"
        android:title="@string/setting_switch_title" />

</PreferenceScreen>