<?xml version="1.0" encoding="UTF-8"?>
<!-- 特殊符号 -->
<keyboard
  skb_template="@xml/skb_template1"
  skb_cache_flag="true"
  width="10%p"
  height="25%p"
  key_type="0"
  repeat="false"
  balloon="true">

  <row>
    <keys splitter="|" labels="1|2|3|4|5|6|7|8|9|0"
      codes="8|9|10|11|12|13|14|15|16|7"/>
  </row>
	
  <row>
    <key code="-306" key_type="1" width="29.999996%p" label="@string/Devices" />
    <key code="-303" key_type="1" width="39.999996%p" label="@string/StartScan" />
    <key code="-305" key_type="1" width="29.999996%p" label="@string/Function"/>
  </row>

  <row>
    <key code="-6" key_type="3"  width="14.286%p" icon="@drawable/smiley_icon" icon_popup="@drawable/smiley_popup_icon" />
    <key code="-301" key_type="1" width="35.5%p" label="@string/StartBluetooth" />
    <key code="-302" key_type="1" width="35.5%p" label="@string/StopBluetooth" />
    <key id="3"/>
  </row>

  <row width="14.696%p" key_type="1">
    <key code="-2" label="中 符" width="20%p" repeat="true">
      <toggle_state state_id="@string/toggle_en_sym1" label="英 符" code="-2"/>
    </key>
    <key code="-3" label="\?123"/>
    <key code="62" key_type="5" width="15.3%p"/>
    <key code="-304" label="@string/key_cn_usb" width="15.3%p"/>
    <key label="。" key_type="0" icon="@drawable/period_full_icon"
      icon_popup="@drawable/period_full_popup_icon">
      <toggle_state state_id="@string/toggle_en_sym1" label="."
        icon="@drawable/period_icon" icon_popup="@drawable/period_popup_icon"/>
      <toggle_state state_id="@string/toggle_en_upper" label="."
        icon="@drawable/period_icon" icon_popup="@drawable/period_popup_icon"/>
    </key>
    <key id="1"/>
  </row>
</keyboard>

